# torrent

./: ARCHITECTURE.org  Cargo.toml  README.org  design.org  note.org
crates/gc/: Cargo.toml
crates/gc/src/: active_plan.rs  collection.rs  gc.rs  lib.rs  object_model.rs  reference_glue.rs  scanning.rs  slot.rs  thread.rs  vm.rs
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: defun.rs  defun_internal.rs  defun_new.rs  function.rs  lib.rs  variantly.rs
src/: ast.rs  compiler.rs  core.rs  data.rs  fns.rs  gc.rs  main.rs  runtime.rs  test.el
src/core/: compiler.rs  cons.rs  env.rs  error.rs  function.rs  hashtable.rs  ident.rs  indirect.rs  map.rs  number.rs  object.rs  parser.rs  runtime.rs  string.rs  symbol.rs  tag.rs  tagged_ptr.rs  value.rs  vector.rs
src/core/compiler/: arch.rs  ast_to_ir.rs  codegen.rs  error.rs  ir.rs  jit.rs  macro_item.rs  node_parser.rs  optimization.rs  scope.rs  stack_map.rs
src/core/compiler/optimization/: ir.rs  mod.rs  passes.rs  pipeline.rs  scope.rs  types.rs
src/core/parser/: expr.rs  expr_parser.rs  macro_expansion.rs  scope.rs  step_macro_expansion.rs  token.rs
src/gc/: active_plan.rs  collection.rs  collector.rs  lab.rs  object.rs  object_model.rs  reference_glue.rs  scanning.rs  slot.rs  thread.rs  trace.rs  vm.rs
