[package]
name = "newemacs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "crates/proc-macros",
]

[workspace.dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm20-1"] }
# llvm-sys-201 = { package = "llvm-sys", version = "170.0.1", features = ["prefer-static"] }
thiserror = "2"
chumsky = "1.0.0-alpha.8"
anyhow = "1.0.99"
arc-swap = "1.7.1"
tokio = { version = "1.47.1", features = ["full"] }
proc-macros = { path = "crates/proc-macros" }
cranelift = "0.123.2"
cranelift-jit = "0.123.2"
cranelift-native = "0.123.2"
cranelift-module = "0.123.2"
indexmap = "2.11.0"
rand = "0.9.2"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
string-interner = "0.19.0"
inventory = "0.3.21"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[build-dependencies]
syn = { workspace = true }
quote = { workspace = true }
